@@ -25,18 +25,24 @@
 
 #include <QString>
 #include <QSize>
+#include "config.h"
 
 class QSettings;
 
 class MediaSettings {
 
 public:
-	enum LetterboxType { NoLetterbox = 0, Letterbox_43 = 1, Letterbox_169 = 2 };
 	enum Denoise { NoDenoise = 0, DenoiseNormal = 1, DenoiseSoft = 2 };
+#if NEW_ASPECT_CODE
+	enum Aspect { AspectAuto = 1, Aspect43 = 2, Aspect169 = 3, Aspect235 = 4,
+                  Aspect149 = 8, Aspect1610 = 9, Aspect54 = 10 };
+#else
 	enum Aspect { AspectAuto = 1, Aspect43 = 2, Aspect169 = 3, Aspect235 = 4,
                   Aspect43Letterbox = 5, Aspect43Panscan = 6, 
                   Aspect43To169 = 7, Aspect149 = 8, Aspect1610 = 9, 
                   Aspect54 = 10, Aspect169Letterbox = 11 };
+	enum LetterboxType { NoLetterbox = 0, Letterbox_43 = 1, Letterbox_169 = 2 };
+#endif
 	enum Deinterlace { NoDeinterlace = 0, L5 = 1, Yadif = 2, LB = 3, 
                        Yadif_1 = 4, Kerndeint = 5 };
 	enum AudioChannels { ChDefault = 0, ChStereo = 2, ChSurround = 4, 
@@ -58,7 +64,6 @@ public:
 	int current_chapter_id;
 	int current_angle_id;
 
-	LetterboxType letterbox; // Force letterbox
 	int aspect_ratio_id;
 
 	//bool fullscreen;
@@ -81,8 +86,14 @@ public:
 	double speed; // Speed of playback: 1.0 = normal speed
 
 	int current_deinterlacer;
+
+#if NEW_ASPECT_CODE
+	bool add_letterbox;
+#else
+	LetterboxType letterbox; // Force letterbox
 	QString panscan_filter;
 	QString crop_43to169_filter;
+#endif
 
 	// Filters in menu
 	bool phase_filter;
